[package]
name = "gadgetron-bundle-document-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAW ingestion extractors — markdown (W3-KL-2) + PDF (W3-KL-3); docx/pptx in W3-KL-4"

[features]
default = ["markdown"]
# Always-on for knowledge ingest — the canonical wiki format. Kept
# feature-gated so the pdf / docx / pptx features can compose.
markdown = []
# W3-KL-3 (D-20260418-13): `pdf-extract` crate wraps `lopdf` and parses
# the PDF content stream into a UTF-8 text layer. Kept optional so
# build-machine images that don't care about PDF ingestion skip the
# ~10 crate transitive chain (lopdf, encoding_rs, adobe-cmap-parser …).
# Pulls in `tokio` with just the `rt` feature (for `spawn_blocking`)
# to keep lopdf's CPU-heavy walk off the caller's async reactor thread.
pdf = ["pdf-extract", "tokio"]
# Placeholder features — implementations land in W3-KL-4 via pandoc
# subprocess extractors.
# docx = []
# pptx = []

[dependencies]
async-trait = { workspace = true }
gadgetron-core = { workspace = true }
serde_json = { workspace = true }
semver = "1"
# D-12 leaf dependency — pdf-extract is only compiled into
# plugin-document-formats, never into gadgetron-core / knowledge. Version
# 0.7.x is the last branch that builds against a stable `lopdf` ABI;
# 0.10.x churns on API surface. See D-20260418-13 range guardrail.
pdf-extract = { version = "0.7", optional = true }
# Optional — only needed for `PdfExtractor::extract` to off-load the
# synchronous lopdf walk onto `tokio::task::spawn_blocking`. Gated by
# the `pdf` feature to preserve D-12's "markdown-only builds pull zero
# extra transitives" guarantee.
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
# `#[tokio::test]` for the async extract-fn tests.
tokio = { workspace = true, features = ["macros", "rt"] }
